# i18n-redis

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  portfile.cmake  vcpkg.json
cmake/: i18n-redisConfig.cmake.in
example/: main.cpp
include/: i18n_redis.h
include/i18n/: configuration.h  i18n_redis.h  json.h  translation.h  translation_provider.h  types.h
include/i18n/redis/: connection.h  translation_provider.h
locales/en/: messages.json
ports/i18n-redis/: portfile.cmake  vcpkg.json
scripts/: build_project.bat  build_project.sh  dependency_cli.js  dependency_ui.py  install_vcpkg.bat  install_vcpkg.sh  update_port.ps1  update_port.sh
scripts/cmake/: Dependencies.cmake  Targets.cmake  i18n-redis-config.cmake.in
src/: connection.cpp  i18n_redis.cpp  main.cpp  redis_translation_provider.cpp  translation.cpp  translation_provider.cpp
vcpkg/triplets/: x64-linux-shared.cmake  x64-linux.cmake  x64-windows-static.cmake  x64-windows.cmake
